2005-04-03 Pawel Salek

	* Makefile.am: s,m4,macros,g;
	* balsa.spec.in: compile on suse.
	* configure.in:
	* libbalsa/imap/auth-gssapi.c: compile against heimdal.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-04-01 18:46  PeterB

	* src/sendmsg-window.c: omit all identity addresses from cc header.
	* src/balsa-message.c, src/print.c, libbalsa/body.c,
	libbalsa/html.c, libbalsa/html.h: move charset conversion for html
	parts to libbalsa/html.c, as it's handled differently by the two
	widgets.

2005-03-31 19:58  PeterB

	* src/sendmsg-window.c: remember folder when including file in
	message content.

2005-03-30 19:45  PeterB

	* src/balsa-message.c: fix bug 172145.

2005-03-29 21:16  PeterB

	* src/balsa-message.c: fix bug 172005.
	* libbalsa/rfc3156.c: pass NULL to g_locale_to_utf8 instead of
	(ssize_t *), to keep gcc4 quiet.
	* src/: balsa-message.c, sendmsg-window.c: use glib macros to cast
	int to pointer and back.

2005-03-26 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/rfc3156.c: plug in recently introduced DoS.

2005-03-24 06:59  PeterB

	* src/ab-main.c: set all locales.
	* src/main.c: set all locales.
	* src/main-window.c: make label localizable.

2005-03-24 Pawel Salek

	* libbalsa/address-book-ldap.c: add missing libbalsa-conf.h
	* balsa.spec.in: update icon cache after rpm installation.
	* images/Makefile.am: bug 171388.

2005-03-23 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* src/balsa-message.c, libbalsa/gmime-gpgme-context.c,
	libbalsa/gmime-gpgme-context.h, libbalsa/identity.c,
	libbalsa/identity.h, libbalsa/rfc3156.c, libbalsa/rfc3156.h,
	libbalsa/send.c: (1) plug a minor security problem when checking
	the gpg subkey status; (2) improve dealing with low-validity uid's
	for encryption; (3) several smaller fixes.

2005-03-23 PeterB

	* libbalsa/rfc3156.c: fix bug 171415.
	* libbalsa/address-book-ldap.c, src/ab-main.c: complete migration