@@ -1,1 +1,1 @@
-VOID:INT,STRING,POINTER
+VOID:INT,INT,POINTER
