@@ -1,3 +1,10 @@
+2005-04-05 Pawel Salek
+
+	* libbalsa/imap/imap-handle.c: proper types for list-response
+	signal handlers.
+	* libbalsa/imap/libimap-marshal.list: ditto.
+	* libbalsa/imap/imap-search.c: compile on darwin.
+	
 2005-04-03 Pawel Salek
 
 	* Makefile.am: s,m4,macros,g;
